--- a/BTCPayServer/Views/Invoice/ListInvoices.cshtml
+++ b/BTCPayServer/Views/Invoice/ListInvoices.cshtml
@@ -429,7 +429,7 @@
         }
 
         .pavpil-complete {
-            background: #329f80;
+            background: #14386f;
             color: #fff;
         }
     </style>
