--- a/BTCPayServer/Views/PaymentRequest/GetPaymentRequests.cshtml
+++ b/BTCPayServer/Views/PaymentRequest/GetPaymentRequests.cshtml
@@ -1,7 +1,7 @@
 @using BTCPayServer.Services.PaymentRequests
 @model BTCPayServer.Models.PaymentRequestViewModels.ListPaymentRequestsViewModel
 @{
-    Layout = "_Layout";
+    Layout = "_Layout_cs";
 }
 <section>
     <div class="container">
