--- a/BTCPayServer/Views/Shared/_NavLayout.cshtml
+++ b/BTCPayServer/Views/Shared/_NavLayout.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-Layout = "/Views/Shared/_Layout.cshtml";
+Layout = "/Views/Shared/_Layout_cs.cshtml";
 ViewBag.ShowMenu = ViewBag.ShowMenu ?? true;
 }
 
