--- a/BTCPayServer/Views/Home/Home.cshtml
+++ b/BTCPayServer/Views/Home/Home.cshtml
@@ -10,14 +10,18 @@
             <div class="row d-flex justify-content-center">
                 <img src="~/img/logo-crowdstacks.png" height="90">
             </div>
-            <hr />
-            <div class="row">
+            
+            <div class="container d-flex justify-content-center">
                 <div class="col-md-6 text-white">
+                    <hr align="left" />
                     <h2>Stacked</h2>
                     <h3>on BTCPayServer</h3>
                     <p>BTCPay Server is a free and open source server(FOSS) for merchants wanting to accept Bitcoin for their business.</p>
+                    <a style="background-color: #fff;color: #222;display:inline-block;text-align: center;white-space: nowrap;vertical-align: middle;user-select: none;line-height: 1.25;font-size: 1rem;text-decoration:none;font-weight: 700;    text-transform: uppercase;border: none;border-radius: 300px;padding: 15px 30px;" href="https://btcpayserver.org" target="_blank">Official website</a>
+
                 </div>
                 <div class="col-md-6">
+                    <hr align="left" />
                     <h2>Featuring</h2>
                     <h3>STACKATHON MODE</h3>
                     <p class="">Crowd Stacks is built/stacked upon BTCPay Server as a FOSS with additional event features baked into the BTCPay Crowdfund app. </p>
@@ -26,7 +30,7 @@
 
             </div>
           
-            <div class="row mt-5">
+            <div class="row mt-3">
                 <div class="col-sm-3 ml-auto text-center text-white">
                     <a href="https://chat.btcpayserver.org/" target="_blank">
                         <img src="~/img/mattermost.png" height="50" />
