--- a/BTCPayServer/Views/Shared/_NavLayout.cshtml
+++ b/BTCPayServer/Views/Shared/_NavLayout.cshtml
@@ -6,25 +6,25 @@ ViewBag.ShowMenu = ViewBag.ShowMenu ?? true;
 <section>
     <div class="container">
         <div class="row">
-            <div class="col-lg-12">
-                <h4 class="section-heading">@ViewData["MainTitle"]: @ViewData["Title"]</h4>
+            <div class="col-md-3">
+                <h4 class="section-heading">@ViewData["MainTitle"]:</h4>
+                <h5>@ViewData["Title"]</h5>
                 <hr class="primary ml-0">
+
+
+
+
+                @if (ViewBag.ShowMenu)
+                {
+                    @await Html.PartialAsync("_Nav")
+                }
             </div>
+            <div class="col-md-6">
+                @RenderBody()
+            </div>
+
         </div>
 
-        <div>
-            <div class="row">
-                <div class="col-md-3">
-                    @if (ViewBag.ShowMenu)
-                    {
-                    @await Html.PartialAsync("_Nav")
-                    }
-                </div>
-                <div class="col-md-9">
-                    @RenderBody()
-                </div>
-            </div>
-        </div>
     </div>
 </section>
 @section HeadScripts {
