--- a/BTCPayServer/Views/Account/Login.cshtml
+++ b/BTCPayServer/Views/Account/Login.cshtml
@@ -12,10 +12,15 @@
     <div class="row mr-0">
         <div class="col ml-md-5">
             <div class="header-content-inner text-white">
-                <img src="~/img/logo-crowdstacks.png" height="90">
+                <a href="~/"><img src="~/img/logo-crowdstacks.png" height="90"></a>
                 <hr />
-               
             </div>
+            
+            <h2 class="text-center text-white">BTCPAYSERVER</h2>
+            <hr />
+            <h3 class="text-center text-white">LIGHTNING</h3>
+            <hr />
+            <h4 class="text-center text-white">BITCOIN</h4>
         </div>
         <div class="col-md-6">
             <div class="modal-dialog modal-login">
