--- a/BTCPayServer/Views/Account/Register.cshtml
+++ b/BTCPayServer/Views/Account/Register.cshtml
@@ -9,9 +9,20 @@
         <div class="col ml-md-5">
 
             <div class="header-content-inner text-white">
-                <img src="~/img/logo-crowdstacks.png" height="90">
+                <a href="~/"><img src="~/img/logo-crowdstacks.png" height="90"></a>
                 <hr />
             </div>
+            
+            <div class="text-center">
+                <h5>HOST YOUR LIVE CROWDFUNDING EVENT HERE</h5>
+                <h6>OR</h6>
+                <h5><a href="https://github.com/crowdstacks/btcpayserver" target="_blank">SPIN UP YOUR OWN SERVER</a></h5>
+            </div>
+            <hr />
+            <h3>featuring</h3>
+            <h2 class="text-white">STACKATHON MODE</h2>
+            <h4 class="text-right">LIVESTREAM YOUR EVENT</h4>
+            <h4 class="text-right">WITH THE BTCPAYSERVER CROWDFUND APP</h4>
         </div>
 
         <div class="col-sm-6">
