--- a/BTCPayServer/Views/Home/Home.cshtml
+++ b/BTCPayServer/Views/Home/Home.cshtml
@@ -8,7 +8,7 @@
     <div class="container d-flex justify-content-center">
         <div class="col header-content text-white ">
             <div class="row d-flex justify-content-center">
-                <img src="~/img/logo-crowdstacks.png" height="90">
+                <a href="~/"><img src="~/img/logo-crowdstacks.png" height="90"></a>
             </div>
             
             <div class="container d-flex justify-content-center">
@@ -31,29 +31,30 @@
             </div>
           
             <div class="row mt-3">
+               
                 <div class="col-sm-3 ml-auto text-center text-white">
                     <a href="https://chat.btcpayserver.org/" target="_blank">
                         <img src="~/img/mattermost.png" height="25" />
                     </a>
-                    <p>On Mattermost</p>
+                    <p>Mattermost</p>
                 </div>
                 <div class="col-sm-3 ml-auto text-center">
                     <a href="https://slack.btcpayserver.org/" target="_blank">
                         <img src="~/img/slack.png" height="25" />
                     </a>
-                    <p>On Slack</p>
+                    <p>Slack</p>
                 </div>
                 <div class="col-sm-3 mr-auto text-center">
                     <a href="https://twitter.com/BtcpayServer" target="_blank">
                         <img src="~/img/twitter.png" height="25" />
                     </a>
-                    <p>On Twitter</p>
+                    <p>Twitter</p>
                 </div>
                 <div class="col-sm-3 mr-auto text-center">
                     <a href="https://github.com/btcpayserver/btcpayserver" target="_blank">
                         <img src="~/img/github.png" height="25" />
                     </a>
-                    <p>On Github</p>
+                    <p>Github</p>
                 </div>
             </div>
 
