--- a/BTCPayServer/Views/Home/Home.cshtml
+++ b/BTCPayServer/Views/Home/Home.cshtml
@@ -11,7 +11,7 @@
                 <a href="~/"><img src="~/img/logo-crowdstacks.png" height="90"></a>
             </div>
             
-            <div class="container d-flex justify-content-center">
+            <div class="container row justify-content-center">
                 <div class="col-md-6 text-white" align="center">
                     <hr  />
                     <h2>Stacked</h2>
