--- a/BTCPayServer/Views/PaymentRequest/GetPaymentRequests.cshtml
+++ b/BTCPayServer/Views/PaymentRequest/GetPaymentRequests.cshtml
@@ -2,7 +2,17 @@
 @model BTCPayServer.Models.PaymentRequestViewModels.ListPaymentRequestsViewModel
 @{
     Layout = "_Layout_cs";
+    ViewBag.ShowMenu = ViewBag.ShowMenu ?? true;
+
 }
+
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+@inject RoleManager<IdentityRole> RoleManager
+@inject BTCPayServer.Services.BTCPayServerEnvironment env
+@inject BTCPayServer.HostedServices.NBXplorerDashboard dashboard
+@inject BTCPayServer.HostedServices.CssThemeManager themeManager
+
 <section>
     <div class="container">
         @if (!string.IsNullOrEmpty(Model.StatusMessage))
@@ -13,75 +23,118 @@
                 </div>
             </div>
         }
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Payment Requests</h2>
-            </div>
-        </div>
-        <div class="row no-gutter" style="margin-bottom: 5px;">
-            <div class="col-lg-6">
-                <a asp-action="EditPaymentRequest" class="btn btn-primary" role="button" id="CreatePaymentRequest"><span class="fa fa-plus"></span> Create a new payment request</a>
-                <a href="https://docs.btcpayserver.org/features/paymentrequests" target="_blank"><span class="fa fa-question-circle-o" title="More information..."></span></a>
-            </div>
-        </div>
-        <div class="row">
-            <table class="table table-sm table-responsive-md">
-                <thead>
-                    <tr>
-                        <th>Title</th>
-                        <th>Expiry</th>
-                        <th class="text-right">Price</th>
-                        <th class="text-right">Status</th>
-                        <th class="text-right">Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model.Items)
+            <div class="row">
+                <div class="col-md-3">
+                    <a class="navbar-brand js-scroll-trigger" href="~/">
+                        <img src="~/img/logo.png" height="45">
+                        @if (env.NetworkType != NBitcoin.NetworkType.Mainnet)
+                        {
+                            <span class="badge badge-warning" style="font-size:10px;">@env.NetworkType.ToString()</span>
+                        }
+                    </a>
+                    @if (env.OnionUrl != null)
                     {
-                        <tr>
-                            <td>@item.Title</td>
-                            <td>@(item.ExpiryDate?.ToString("g") ?? "No Expiry")</td>
-                            <td class="text-right">@item.Amount @item.Currency</td>
-                            <td class="text-right">@item.Status</td>
-                            <td class="text-right">
-                                <a asp-action="EditPaymentRequest" asp-route-id="@item.Id">Edit</a>
-                                <span> - </span>
-                                <a asp-action="ViewPaymentRequest" asp-route-id="@item.Id">View</a>
-                                <span> - </span>
-                                <a target="_blank" asp-action="ListInvoices" asp-controller="Invoice" asp-route-searchterm="@($"orderid:{PaymentRequestRepository.GetOrderIdForPaymentRequest(item.Id)}")">Invoices</a>
-                                <span> - </span>
-                                <a target="_blank" asp-action="PayPaymentRequest" asp-route-id="@item.Id">Pay</a>
-                                <span> - </span>
-                                <a target="_blank" asp-action="ClonePaymentRequest" asp-route-id="@item.Id">Clone</a>
-                                <span> - </span>
-                                <a asp-action="RemovePaymentRequestPrompt" asp-route-id="@item.Id">Remove</a>
-                            </td>
-                        </tr>
+                        <span>
+                            <a href="@env.OnionUrl" target="_blank">
+                                <img src="~/img/icons/onion.svg" width="26" height="32" />
+                            </a>
+                        </span>
                     }
-                </tbody>
-            </table>
+                    <hr />
 
-            <nav aria-label="...">
-                <ul class="pagination">
-                    <li class="page-item  @(Model.Skip == 0 ? "disabled" : null)">
-                        <a class="page-link" tabindex="-1" href="@Url.Action("GetPaymentRequests", new
+                    <h5>@ViewData["Title"]</h5>
+                    <h4 class="section-heading">Payment Requests</h4>
+                    <hr class="primary ml-0">
+
+                    <div class="row justify-content-center">
+
+                        @if (SignInManager.IsSignedIn(User))
+                        {
+                            if (User.IsInRole(Roles.ServerAdmin))
+                            {
+                                <a asp-area="" asp-controller="Server" asp-action="ListUsers" title="Server Settings" class="nav-link js-scroll-trigger" id="ServerSettings"><i class="fa fa-cog"></i></a>
+                                <a asp-area="" asp-controller="Manage" asp-action="Index" title="My Settings" class="nav-link js-scroll-trigger" id="MySettings"><i class="fa fa-user"></i></a>
+                                <a asp-area="" asp-controller="Account" asp- asp-action="Logout" title="Logout" class="nav-link js-scroll-trigger" id="Logout"><i class="fa fa-sign-out"></i></a>
+
+                            }
+
+                        }
+
+                    </div>
+
+
+                    @if (ViewBag.ShowMenu)
+                    {
+                        @await Html.PartialAsync("_SideNavLayout")
+                    }
+                </div>
+                <div class="col-9 pt-md-5">
+
+                    <div class="row no-gutter" style="margin-bottom: 5px;">
+                        <div class="col-lg-6">
+                            <a asp-action="EditPaymentRequest" class="btn btn-primary" role="button" id="CreatePaymentRequest"><span class="fa fa-plus"></span> Create a new payment request</a>
+                            <a href="https://docs.btcpayserver.org/features/paymentrequests" target="_blank"><span class="fa fa-question-circle-o" title="More information..."></span></a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <table class="table table-sm table-responsive-md">
+                            <thead>
+                                <tr>
+                                    <th>Title</th>
+                                    <th>Expiry</th>
+                                    <th class="text-right">Price</th>
+                                    <th class="text-right">Status</th>
+                                    <th class="text-right">Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model.Items)
+                                {
+                                    <tr>
+                                        <td>@item.Title</td>
+                                        <td>@(item.ExpiryDate?.ToString("g") ?? "No Expiry")</td>
+                                        <td class="text-right">@item.Amount @item.Currency</td>
+                                        <td class="text-right">@item.Status</td>
+                                        <td class="text-right">
+                                            <a asp-action="EditPaymentRequest" asp-route-id="@item.Id">Edit</a>
+                                            <span> - </span>
+                                            <a asp-action="ViewPaymentRequest" asp-route-id="@item.Id">View</a>
+                                            <span> - </span>
+                                            <a target="_blank" asp-action="ListInvoices" asp-controller="Invoice" asp-route-searchterm="@($"orderid:{PaymentRequestRepository.GetOrderIdForPaymentRequest(item.Id)}")">Invoices</a>
+                                            <span> - </span>
+                                            <a target="_blank" asp-action="PayPaymentRequest" asp-route-id="@item.Id">Pay</a>
+                                            <span> - </span>
+                                            <a target="_blank" asp-action="ClonePaymentRequest" asp-route-id="@item.Id">Clone</a>
+                                            <span> - </span>
+                                            <a asp-action="RemovePaymentRequestPrompt" asp-route-id="@item.Id">Remove</a>
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+
+                        <nav aria-label="...">
+                            <ul class="pagination">
+                                <li class="page-item  @(Model.Skip == 0 ? "disabled" : null)">
+                                    <a class="page-link" tabindex="-1" href="@Url.Action("GetPaymentRequests", new
                                                                  {
                                                                      skip = Math.Max(0, Model.Skip - Model.Count),
                                                                      count = Model.Count,
                                                                  })">Previous</a>
-                    </li>
-                    <li class="page-item disabled">
-                        <span class="page-link">@(Model.Skip + 1) to @(Model.Skip + Model.Count) of @Model.Total</span>
-                    </li>
-                    <li class="page-item @(Model.Total > (Model.Skip + Model.Count) ? null : "disabled")">
-                        <a class="page-link" href="@Url.Action("GetPaymentRequests", new
+                                </li>
+                                <li class="page-item disabled">
+                                    <span class="page-link">@(Model.Skip + 1) to @(Model.Skip + Model.Count) of @Model.Total</span>
+                                </li>
+                                <li class="page-item @(Model.Total > (Model.Skip + Model.Count) ? null : "disabled")">
+                                    <a class="page-link" href="@Url.Action("GetPaymentRequests", new
                                                    {
                                                        skip = Model.Skip + Model.Count,
                                                        count = Model.Count,
                                                    })">Next</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </div>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>    </div>
 </section>
