--- a/BTCPayServer/Views/UserStores/ListStores.cshtml
+++ b/BTCPayServer/Views/UserStores/ListStores.cshtml
@@ -1,60 +1,108 @@
 ﻿@model StoresViewModel
 @{
     ViewData["Title"] = "Stores";
+    ViewBag.ShowMenu = ViewBag.ShowMenu ?? true;
+
 }
+
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+@inject RoleManager<IdentityRole> RoleManager
+@inject BTCPayServer.Services.BTCPayServerEnvironment env
+@inject BTCPayServer.HostedServices.NBXplorerDashboard dashboard
+@inject BTCPayServer.HostedServices.CssThemeManager themeManager
 
 <section>
     <div class="container">
-        @if (TempData.ContainsKey("TempDataProperty-StatusMessage"))
-        {
         <div class="row">
-            <div class="col-lg-12 text-center">
-                <partial name="_StatusMessage" for="@TempData["TempDataProperty-StatusMessage"]" />
-            </div>
-        </div>
-        }
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">@ViewData["Title"]</h2>
-                <hr class="primary">
-                <p>Create and manage store settings.</p>
-            </div>
-        </div>
-
-        <div class="row">
-            <a asp-action="CreateStore" class="btn btn-primary" role="button" id="CreateStore"><span class="fa fa-plus"></span> Create a new store</a>
-            <table class="table table-sm table-responsive-md">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Website</th>
-                        <th style="text-align:right">Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var store in Model.Stores)
+            <div class="col-md-3">
+                <a class="navbar-brand js-scroll-trigger" href="~/">
+                    <img src="~/img/logo.png" height="45">
+                    @if (env.NetworkType != NBitcoin.NetworkType.Mainnet)
                     {
-                        <tr id="store-@store.Id">
-                            <td>@store.Name</td>
-                            <td>
-                                @if (!string.IsNullOrEmpty(store.WebSite))
-                                {
-                                    <a href="@store.WebSite">@store.WebSite</a>
-                                }
-                            </td>
-                            <td style="text-align:right">
-                                <a asp-action="ListInvoices" asp-controller="Invoice" asp-route-searchTerm="storeid:@store.Id">Invoices</a><span> - </span>
-                                @if (store.IsOwner)
-                                {
-                                    <a asp-action="UpdateStore" asp-controller="Stores" asp-route-storeId="@store.Id" id="update-store-@store.Id">Settings</a><span> - </span>
-                                }
-                                <a asp-action="DeleteStore" asp-route-storeId="@store.Id">Remove</a>
-                            </td>
-                        </tr>
+                        <span class="badge badge-warning" style="font-size:10px;">@env.NetworkType.ToString()</span>
                     }
-                </tbody>
-            </table>
-        </div>
+                </a>
+                @if (env.OnionUrl != null)
+                {
+                    <span>
+                        <a href="@env.OnionUrl" target="_blank">
+                            <img src="~/img/icons/onion.svg" width="26" height="32" />
+                        </a>
+                    </span>
+                }
+                <hr />
 
-    </div>
+                <h2 class="section-heading">@ViewData["Title"]</h2>
+                <p>Create and manage store settings.</p>
+                <hr class="primary ml-0">
+
+                <div class="row justify-content-center">
+
+                    @if (SignInManager.IsSignedIn(User))
+                    {
+                        if (User.IsInRole(Roles.ServerAdmin))
+                        {
+                            <a asp-area="" asp-controller="Server" asp-action="ListUsers" title="Server Settings" class="nav-link js-scroll-trigger" id="ServerSettings"><i class="fa fa-cog"></i></a>
+                            <a asp-area="" asp-controller="Manage" asp-action="Index" title="My Settings" class="nav-link js-scroll-trigger" id="MySettings"><i class="fa fa-user"></i></a>
+                            <a asp-area="" asp-controller="Account" asp- asp-action="Logout" title="Logout" class="nav-link js-scroll-trigger" id="Logout"><i class="fa fa-sign-out"></i></a>
+
+                        }
+
+                    }
+
+                </div>
+
+
+                @if (ViewBag.ShowMenu)
+                {
+                    @await Html.PartialAsync("_SideNavLayout")
+                }
+            </div>
+            <div class="col-8 pt-md-5">
+                @if (TempData.ContainsKey("TempDataProperty-StatusMessage"))
+                {
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            <partial name="_StatusMessage" for="@TempData["TempDataProperty-StatusMessage"]" />
+                        </div>
+                    </div>
+                }
+
+                <div class="row">
+                    <a asp-action="CreateStore" class="btn btn-primary" role="button" id="CreateStore"><span class="fa fa-plus"></span> Create a new store</a>
+                    <table class="table table-sm table-responsive-md">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Website</th>
+                                <th style="text-align:right">Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var store in Model.Stores)
+                            {
+                                <tr id="store-@store.Id">
+                                    <td>@store.Name</td>
+                                    <td>
+                                        @if (!string.IsNullOrEmpty(store.WebSite))
+                                        {
+                                            <a href="@store.WebSite">@store.WebSite</a>
+                                        }
+                                    </td>
+                                    <td style="text-align:right">
+                                        <a asp-action="ListInvoices" asp-controller="Invoice" asp-route-searchTerm="storeid:@store.Id">Invoices</a><span> - </span>
+                                        @if (store.IsOwner)
+                                        {
+                                            <a asp-action="UpdateStore" asp-controller="Stores" asp-route-storeId="@store.Id" id="update-store-@store.Id">Settings</a><span> - </span>
+                                        }
+                                        <a asp-action="DeleteStore" asp-route-storeId="@store.Id">Remove</a>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>    </div>
 </section>
