--- a/BTCPayServer/Views/Wallets/ListWallets.cshtml
+++ b/BTCPayServer/Views/Wallets/ListWallets.cshtml
@@ -1,58 +1,110 @@
 ﻿@model BTCPayServer.Models.WalletViewModels.ListWalletsViewModel
 @{
     ViewData["Title"] = "Wallets";
+    ViewBag.ShowMenu = ViewBag.ShowMenu ?? true;
+
 }
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+@inject RoleManager<IdentityRole> RoleManager
+@inject BTCPayServer.Services.BTCPayServerEnvironment env
+@inject BTCPayServer.HostedServices.NBXplorerDashboard dashboard
+@inject BTCPayServer.HostedServices.CssThemeManager themeManager
 
 <section>
     <div class="container">
-        @if (TempData.ContainsKey("TempDataProperty-StatusMessage"))
-        {
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <partial name="_StatusMessage" for="@TempData["TempDataProperty-StatusMessage"]" />
+        <div class="row">
+            <div class="col-md-3">
+                <a class="navbar-brand js-scroll-trigger" href="~/">
+                    <img src="~/img/logo.png" height="45">
+                    @if (env.NetworkType != NBitcoin.NetworkType.Mainnet)
+                    {
+                        <span class="badge badge-warning" style="font-size:10px;">@env.NetworkType.ToString()</span>
+                    }
+                </a>
+                @if (env.OnionUrl != null)
+                {
+                    <span>
+                        <a href="@env.OnionUrl" target="_blank">
+                            <img src="~/img/icons/onion.svg" width="26" height="32" />
+                        </a>
+                    </span>
+                }
+                <hr />
+
+                <h2 class="section-heading">@ViewData["Title"]</h2>
+                <p>Create and manage wallets. <a href="https://docs.btcpayserver.org/features/wallet" target="_blank"><span class="fa fa-question-circle-o" title="More information..."></span></a></p>
+                <hr class="primary ml-0">
+
+                <div class="row justify-content-center">
+
+                    @if (SignInManager.IsSignedIn(User))
+                    {
+                        if (User.IsInRole(Roles.ServerAdmin))
+                        {
+                            <a asp-area="" asp-controller="Server" asp-action="ListUsers" title="Server Settings" class="nav-link js-scroll-trigger" id="ServerSettings"><i class="fa fa-cog"></i></a>
+                            <a asp-area="" asp-controller="Manage" asp-action="Index" title="My Settings" class="nav-link js-scroll-trigger" id="MySettings"><i class="fa fa-user"></i></a>
+                            <a asp-area="" asp-controller="Account" asp- asp-action="Logout" title="Logout" class="nav-link js-scroll-trigger" id="Logout"><i class="fa fa-sign-out"></i></a>
+
+                        }
+
+                    }
+
+                </div>
+
+
+                @if (ViewBag.ShowMenu)
+                {
+                    @await Html.PartialAsync("_SideNavLayout")
+                }
+            </div>
+            <div class="col-9 pt-md-5">
+                @if (TempData.ContainsKey("TempDataProperty-StatusMessage"))
+                {
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            <partial name="_StatusMessage" for="@TempData["TempDataProperty-StatusMessage"]" />
+                        </div>
+                    </div>
+                }
+
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <table class="table table-sm table-responsive-md">
+                        <thead>
+                            <tr>
+                                <th>Store Name</th>
+                                <th>Crypto Code</th>
+                                <th>Balance</th>
+                                <th style="text-align:right">Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var wallet in Model.Wallets)
+                            {
+                                <tr>
+                                    @if (wallet.IsOwner)
+                                    {
+                                        <td><a asp-action="UpdateStore" asp-controller="Stores" asp-route-storeId="@wallet.StoreId">@wallet.StoreName</a></td>
+                                    }
+                                    else
+                                    {
+                                        <td>@wallet.StoreName</td>
+                                    }
+                                    <td>@wallet.CryptoCode</td>
+                                    <td>@wallet.Balance</td>
+                                    <td style="text-align:right">
+                                        <a asp-action="WalletTransactions" asp-route-walletId="@wallet.Id">Manage</a>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
                 </div>
             </div>
-        }
-
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">@ViewData["Title"]</h2>
-                <hr class="primary">
-                <p>Create and manage wallets. <a href="https://docs.btcpayserver.org/features/wallet" target="_blank"><span class="fa fa-question-circle-o" title="More information..."></span></a></p>
-            </div>
-        </div>
-
-        <div class="row">
-            <table class="table table-sm table-responsive-md">
-                <thead>
-                    <tr>
-                        <th>Store Name</th>
-                        <th>Crypto Code</th>
-                        <th>Balance</th>
-                        <th style="text-align:right">Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var wallet in Model.Wallets)
-                    {
-                        <tr>
-                            @if (wallet.IsOwner)
-                            {
-                                <td><a asp-action="UpdateStore" asp-controller="Stores" asp-route-storeId="@wallet.StoreId">@wallet.StoreName</a></td>
-                            }
-                            else
-                            {
-                                <td>@wallet.StoreName</td>
-                            }
-                            <td>@wallet.CryptoCode</td>
-                            <td>@wallet.Balance</td>
-                            <td style="text-align:right">
-                                <a asp-action="WalletTransactions" asp-route-walletId="@wallet.Id">Manage</a>
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        </div>
-    </div>
+        </div>    </div>
 </section>
