--- a/BTCPayServer/Views/Home/Home.cshtml
+++ b/BTCPayServer/Views/Home/Home.cshtml
@@ -23,7 +23,7 @@
                 <div class="col-md-6" align="center">
                     <hr />
                     <h2>Featuring</h2>
-                    <h3>STACKATHON MODE</h3>
+                    <h3>STACKATHON MODE</h3><h5 class="text-danger">COMING SOON</h5>
                     <p class="">Crowd Stacks is built/stacked upon BTCPay Server as a FOSS with additional event features baked into the BTCPay Crowdfund app. </p>
 
                 </div>
